[gd_scene load_steps=7 format=3 uid="uid://3g685ilkl0qx"]

[ext_resource type="Script" uid="uid://baldn1yvjhbgg" path="res://HUDs/Components/BaseMenuUI.gd" id="1_t44e7"]
[ext_resource type="PackedScene" uid="uid://bwpheh7agwnlk" path="res://HUDs/Components/StylizedContainer.tscn" id="2_t44e7"]
[ext_resource type="Theme" uid="uid://bngt8jkm3fvb1" path="res://Resources/hud_elements/default.theme" id="2_teuwr"]
[ext_resource type="Texture2D" uid="uid://bx4eby5tdrc57" path="res://Resources/hud_elements/x.png" id="3_gp4yr"]

[sub_resource type="Curve" id="Curve_t715p"]
_data = [Vector2(0.116667, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_b75td"]
width = 250
curve = SubResource("Curve_t715p")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t44e7")

[node name="ScreenDimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CloseTooltip" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 52.0
offset_top = 40.0
offset_right = 140.0
offset_bottom = 10.0
size_flags_vertical = 0
theme = ExtResource("2_teuwr")
text = "Press KEY to close."
vertical_alignment = 1

[node name="BorderContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="StylizedContainer" parent="BorderContainer" instance=ExtResource("2_t44e7")]
layout_mode = 2
container_color = Color(0.27451, 0, 0.156863, 1)
border_color = Color(0.27451, 0.27451, 0.27451, 1)

[node name="HighlightHolder" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="HighlightHolder"]
rotation = -1.22173
rect = Rect2(-400, -5, 800, 10)

[node name="PointLight2D" type="PointLight2D" parent="HighlightHolder/VisibleOnScreenNotifier2D"]
light_mask = 3
range_item_cull_mask = 2
shadow_enabled = true
texture = SubResource("CurveTexture_b75td")
texture_scale = 5.0
height = 5.0

[node name="PointLight2D2" type="PointLight2D" parent="HighlightHolder/VisibleOnScreenNotifier2D"]
light_mask = 2
visibility_layer = 0
position = Vector2(-20, -20)
range_item_cull_mask = 2
shadow_enabled = true
texture = SubResource("CurveTexture_b75td")
texture_scale = 10.0
height = 5.0

[node name="HighlightTimer" type="Timer" parent="HighlightHolder"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="CloseButton" type="TextureButton" parent="MarginContainer"]
visible = false
texture_filter = 1
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_gp4yr")
texture_pressed = ExtResource("3_gp4yr")
texture_hover = ExtResource("3_gp4yr")
texture_disabled = ExtResource("3_gp4yr")
texture_focused = ExtResource("3_gp4yr")
stretch_mode = 3

[connection signal="screen_exited" from="HighlightHolder/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="HighlightHolder/HighlightTimer" to="." method="_on_highlight_timer_timeout"]
[connection signal="pressed" from="MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
